# sc

./: .gitignore  CHANGELOG.md  Cargo.toml  CheatSheet.md  DefaultKeyBindings.md  LICENSE  README.md  build.rs  install.sh
.github/workflows/: packages.yml
docs/: CheatSheet.md  CommandLineArgs.md  Configuration.md  FileSearch.md  IpcActions.md  MacroSubstitution.md
experimental_scripts/: get_completions.sh
scripts/: complete.sh  edit.sh  view.sh
src/: app.rs  bookmarks.rs  cli.rs  config.rs  history.rs  ipc.rs  macros.rs  main.rs  panel_history.rs  pattern.rs  state.rs  subshell.rs  tilde.rs
src/provider/: filesystem.rs  mod.rs
src/ui/: button.rs  button_bar.rs  cmdline.rs  completion.rs  dialog.rs  focus.rs  menu.rs  mod.rs  modal_event.rs  output_overlay.rs  panel.rs  popup_list.rs  status_bar.rs
