[package]
name = "sc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sc"
path = "src/main.rs"

[[bin]]
name = "sc-action"
path = "src/bin/sc_action.rs"

[dependencies]
ratatui    = "0.29"
crossterm  = { version = "0.28", features = ["event-stream"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
dirs       = "5"
chrono     = "0.4"
regex      = "1"
unicode-width = "0.1"
glob       = "0.3"
nix        = { version = "0.29", features = ["process", "signal", "term", "fs"] }
libc        = "0.2"
clap = { version = "4.6.1", features = ["derive"] }
