[package]
name = "sc"
version = "0.1.0"
edition = "2021"
description = "Sunset Commander — A visual shell for Linux terminals"
authors = ["aranor01"]
license = "MIT"
repository = "https://github.com/aranor01/sc"
readme = "README.md"
keywords = ["tui", "file-manager", "terminal", "ratatui"]
categories = ["command-line-utilities", "filesystem"]
publish = false

[[bin]]
name = "sc"
path = "src/main.rs"

[[bin]]
name = "sc-action"
path = "src/bin/sc_action.rs"

[dependencies]
ratatui    = "0.29"
crossterm  = { version = "0.28", features = ["event-stream"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
dirs       = "5"
chrono     = "0.4"
regex      = "1"
unicode-width = "0.1"
glob       = "0.3"
nix        = { version = "0.29", features = ["process", "signal", "term", "fs"] }
libc        = "0.2"
clap = { version = "4.6.1", features = ["derive"] }
unicode-general-category = "1.1.0"

# `cargo deb` runs `cargo build` as a child process, so it inherits the shell
# environment. Debian policy forbids packages from installing under
# /usr/local (that's reserved for the local admin), so the deb build must
# override the compile-time default with:
#
#   SC_INSTALL_PREFIX=/usr cargo deb
#
# See build.rs for how SC_INSTALL_PREFIX is baked into the binary, and
# src/config.rs (find_scripts_dir) for how it's used at runtime.
[package.metadata.deb]
maintainer = "aranor01 <38322408+aranor01@users.noreply.github.com>"
copyright = "2026, aranor01"
license-file = ["LICENSE", "0"]
extended-description = """\
Sunset Commander (sc) is a two-panel, keyboard- and mouse-driven visual \
shell for Linux terminals, in the spirit of Midnight Commander. It supports \
tagging and multi-file selection, copy/move/delete between the two panels, \
a configurable user command menu, and fully configurable key bindings and \
color scheme."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/sc", "usr/bin/", "755"],
    ["target/release/sc-action", "usr/bin/", "755"],
    ["scripts/edit.sh", "usr/share/sc/scripts/", "755"],
    ["scripts/view.sh", "usr/share/sc/scripts/", "755"],
    ["scripts/complete.sh", "usr/share/sc/scripts/", "755"],
    ["README.md", "usr/share/doc/sc/", "644"],
    ["docs/CheatSheet.md", "usr/share/doc/sc/", "644"],
    ["docs/CommandLineArgs.md", "usr/share/doc/sc/", "644"],
    ["docs/Configuration.md", "usr/share/doc/sc/", "644"],
    ["docs/IpcActions.md", "usr/share/doc/sc/", "644"],
    ["docs/MacroSubstitution.md", "usr/share/doc/sc/", "644"],
]

# A statically-linked musl binary has no shared-library dependencies, so `$auto`
# above has nothing to detect and just prints a harmless warning for it. This
# variant sets deps explicitly for that build instead:
#
#   cargo deb --variant musl --target x86_64-unknown-linux-musl --no-build
[package.metadata.deb.variants.musl]
depends = ""

# `cargo generate-rpm` reads the release binaries directly (no child build
# step like cargo-deb), so it must run after `SC_INSTALL_PREFIX=/usr cargo
# build --release`. Same prefix rationale as [package.metadata.deb] above:
# RPM packages must not install under /usr/local.
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/sc", dest = "/usr/bin/sc", mode = "755" },
    { source = "target/release/sc-action", dest = "/usr/bin/sc-action", mode = "755" },
    { source = "scripts/edit.sh", dest = "/usr/share/sc/scripts/edit.sh", mode = "755" },
    { source = "scripts/view.sh", dest = "/usr/share/sc/scripts/view.sh", mode = "755" },
    { source = "scripts/complete.sh", dest = "/usr/share/sc/scripts/complete.sh", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/sc/README.md", mode = "644", doc = true },
    { source = "docs/CheatSheet.md", dest = "/usr/share/doc/sc/CheatSheet.md", mode = "644", doc = true },
    { source = "docs/CommandLineArgs.md", dest = "/usr/share/doc/sc/CommandLineArgs.md", mode = "644", doc = true },
    { source = "docs/Configuration.md", dest = "/usr/share/doc/sc/Configuration.md", mode = "644", doc = true },
    { source = "docs/IpcActions.md", dest = "/usr/share/doc/sc/IpcActions.md", mode = "644", doc = true },
    { source = "docs/MacroSubstitution.md", dest = "/usr/share/doc/sc/MacroSubstitution.md", mode = "644", doc = true },
]
